# whisp

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  whisp.py
.claude/: settings.local.json
